@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="manager" class="edu.mcw.rgd.dataload.ontologies.Manager">
-        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Jun 17, 2024" />
+        <property name="version" value="ONTOLOGY LOAD pipeline  -- build  Jul 08, 2024" />
 
         <!-- for security reasons, actual value of the API KEY should not be stored in public github code -->
         <property name="apiKeyFile" value="properties/api.key"/>
@@ -26,7 +26,7 @@
 
                 <entry key="SO" value="https://github.com/The-Sequence-Ontology/SO-Ontologies/raw/master/Ontology_Files/so-simple.obo"/>
 
-                <entry key="CL" value="https://github.com/obophenotype/cell-ontology/releases/download/v2024-04-05/cl-basic.obo"/>
+                <entry key="CL" value="https://github.com/obophenotype/cell-ontology/releases/download/v2024-05-15/cl-basic.obo"/>
 
                 <entry key="MA" value="http://www.informatics.jax.org/downloads/reports/adult_mouse_anatomy.obo"/>
                 <!--<entry key="RDO" value="http://ctdbase.org/reports/CTD_diseases.obo.gz"/>-->
@@ -136,6 +136,7 @@
                 <entry key="symbol" value="synonym" />
                 <entry key="alternative:term" value="synonym" />
                 <entry key="IAO:0000028" value="synonym" /><!-- IAO:0000028 == symbol -->
+                <entry key="IAO:0000136" value="is_about" />
                 <entry key="http://www.ebi.ac.uk/efo/definition" value="def" />
                 <entry key="definition:citation" value="comment" />
                 <entry key="http://www.ebi.ac.uk/efo/reason_for_obsolescence" value="definition" />
@@ -265,6 +266,7 @@
                 <value>sexual_homolog_to</value>
                 <value>relational_adjective</value>
                 <value>see_also</value>
+                <value>is_about</value>
                 <value>axiom_lost</value>
                 <value>chebi_smiles</value>
                 <value>chebi_formula</value>
